# Stabiliser

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  MANIFEST.in  main.py  pyproject.toml
.github/workflows/: cmake-single-platform.yml
cpp/: CMakeLists.txt
cpp/benchmarking/: CMakeLists.txt  stabiliser_from_statevector_benchmark.cpp
cpp/benchmarking/stim/: circuit_vs_amplitudes.cc  circuit_vs_amplitudes.h  vector_simulator.cc
cpp/include/: check_matrix.h  f2_helper.h  pauli.h  platform.h  stabiliser_state.h  stabiliser_state_from_statevector.h
cpp/source/: CMakeLists.txt  check_matrix.cpp  pauli.cpp  stabiliser_state.cpp  stabiliser_state_from_statevector.cpp
cpp/source/platform/: CMakeLists.txt
cpp/src/pauli/: pauli.h  pauli_pybind.h
cpp/src/stabiliser_state/: stabiliser_state_pybind.h
cpp/tests/: CMakeLists.txt  f2_helper_test.cpp  pauli_test.cpp  stabiliser_state_from_statevector_test.cpp  stabiliser_state_test.cpp
python/: benchmarking.py  benchmarking_config.py  plot.py
python/benchmarking/: benchmarking.py  benchmarking_config.py  generators.py
python/benchmarking/data/ming/: converting S1 to efficient rep our method on best case stab state with assump.npy  converting S1 to efficient rep our method on random stab state with assump.npy  converting S1 to efficient rep our method on random stab state without assump.npy  (+7 more)
stabiliser-tools/: MANIFEST.in  pyproject.toml
stabiliser-tools/src/stab_tools/: __init__.py
stabiliser-tools/src/stabiliser_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
